--- a/package.json
+++ b/package.json
@@ -32,27 +32,26 @@
     "lint": "eslint gulpfile.js"
   },
   "engines": {
-    "node": ">=18.16.0",
-    "npm": ">=9.8.0"
+    "node": ">=20.12.2",
+    "npm": ">=10.5.0"
   },
   "devDependencies": {
-    "bootstrap": "5.3.1",
+    "bootstrap": "5.3.3",
     "bootstrap-rtl": "3.3.4",
-    "eslint": "8.46.0",
+    "eslint": "8.57.0",
     "eslint-config-standard": "17.1.0",
-    "eslint-plugin-import": "2.28.0",
+    "eslint-plugin-import": "2.29.1",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "6.1.1",
     "fitvids": "2.1.1",
     "gulp": "4.0.2",
     "gulp-clean-css": "4.3.0",
-    "highlightjs": "9.16.2",
-    "jquery": "3.7.0",
+    "highlight.js": "11.9.0",
+    "jquery": "3.7.1",
     "jquery-backstretch": "2.1.18",
     "lunr": "2.3.9",
-    "lunr-languages": "1.12.0",
+    "lunr-languages": "1.14.0",
     "markdown-toc": "1.2.0",
-    "marked": "5.1.2",
     "masonry-layout": "4.2.2",
     "sweetalert2": "11.4.8"
   }
