--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "fitvids": "2.1.1",
     "gulp": "5.0.0",
     "gulp-clean-css": "4.3.0",
+    "gulp-uglify": "3.0.2",
     "highlight.js": "11.9.0",
     "jquery": "3.7.1",
     "jquery-backstretch": "2.1.18",
