--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "@eslint/js": "9.39.2",
     "@fixhq/sweetalert2": "11.10.8",
     "bootstrap": "5.3.8",
-    "codemirror": "5.65.21",
+    "@codemirror/lang-markdown": "6.5.0",
+    "codemirror": "6.0.2",
     "eslint": "9.39.2",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-import": "2.32.0",
@@ -58,6 +59,7 @@
     "highlight.js": "11.11.1",
     "jquery": "4.0.0",
     "marked": "17.0.2",
+    "esbuild": "0.27.3",
     "prettier": "3.8.1"
   }
 }
